Fix hr not aligned center

--- a/themes/naked-man/assets/style.scss
+++ b/themes/naked-man/assets/style.scss
@@ -89,7 +89,7 @@ a.title:hover {
     color: $primary-dark;
 }
 
-.is-aligned-center {
+.is-align-center {
     margin-left: auto;
     margin-right: auto;
     display: block;
